personalize my portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Michael Shoemaker — Data Engineering"
+title: "Ha Do — Data Analyst "
 description: "Production-like data engineering builds, explained clearly."
 baseurl: ""
 url: ""
